更新一线专区相关新闻新语法
更新一线专区相关新闻新语法

--- a/more/templates/src4game1/sass/mod/_article.scss
+++ b/more/templates/src4game1/sass/mod/_article.scss
@@ -121,3 +121,16 @@
 		margin-top: 35px;
 	}
 }
+
+/* 新增相关新闻 */
+.ZQ__releateNews{
+    .ZQ-box{
+        border:none;
+        padding:28px 0;
+    }
+}
+.ext-widthScreen{
+    .ZQ-gameread .m-list li{
+        width: 322px;
+    }
+}
