--- a/more/templates/src4game1/tpl/专区文章页.ejs
+++ b/more/templates/src4game1/tpl/专区文章页.ejs
@@ -38,7 +38,26 @@
                         </blockquote>
 
                         <% include partial/article %>
-
+                        <div class="ZQ__releateNews">
+                            <div class="ZQ-box ZQ-gameread">
+                                <div class="box-hd">
+                                    <h3 class="title">游戏攻略</h3>
+                                    <div class="act">
+                                        <a class="more" href="#"><i></i>更多</a>
+                                    </div>
+                                </div>
+                                <div class="box-bd">
+                                    <ul class="m-list">
+                                        <li><i></i><span class="date">01.02</span><a href="#" title="">韩国玩家星际争霸高达作品死神来了</a></li>
+                                        <li><i></i><span class="date">11.20</span><a href="#" title="">转虫族给力啊 星际猪出品趣味星际2漫画</a></li>
+                                        <li><i></i><span class="date">11.17</span><a href="#" title="">首位GSL美女选手参赛照片 震撼护士装</a></li>
+                                        <li><i></i><span class="date">11.14</span><a href="#" title="">韩国GSL第三季1500人预选赛首日现场图赏</a></li>
+                                        <li><i></i><span class="date">11.13</span><a href="#" title="">国内画师leon19星际争霸2美术作品欣赏</a></li>
+                                        <li><i></i><span class="date">11.13</span><a href="#" title="">国内画师leon19星际争霸2美术作品欣赏</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                         <div id="share-links">
                             <!-- 社交站分享{ -->
                             <!-- 百度分享{ -->
@@ -105,9 +124,6 @@
                     <div class="ZQ-box ZQ-gameread">
                         <div class="box-hd">
                             <h3 class="title">游戏攻略</h3>
-                            <div class="act">
-                                <a class="more" href="#"><i></i>更多</a>
-                            </div>
                         </div>
                         <div class="box-bd">
                             <ul class="m-list">
