--- a/more/templates/src4game1/sass/lego/_config.scss
+++ b/more/templates/src4game1/sass/lego/_config.scss
@@ -14,7 +14,10 @@ $base-font-family        : Tahoma, sans-serif !default;
 $base-header-font-family : "Microsoft YaHei" !default;
 
 // Base Borders & Box Shadows
-$base-border        : 1px solid $base-color !default;
+$base-text-color         : #333 !default; // 文本颜色
+
+$base-border-color       : #dedede !default; // 边框颜色
+$base-border        : 1px solid $base-border-color  !default;
 $base-border-radius : 3px !default;
 $base-box-shadow    : 0 1px 2px rgba($base-color,.25) !default;
 
@@ -24,3 +27,22 @@ $color-success : #5cb85c !default;
 $color-error   : #d9534f !default;
 $color-warning : #f0ad4e !default;
 $color-info    : #5bc0de !default;
+
+$heading-bg-color        : #f5f5f5 !default; // 面板头部背景颜色
+$disabled-text-color     : #aaa !default; // 禁用状态文本颜色
+$disabled-bg-color       : #eee !default; // 禁用状态背景颜色
+$active-bg-color         : #e7e7e7 !default; // 激活状态背景颜色
+$primary-text-color      : #fff !default; // 首选文本颜色
+$primary-color           : #288ad6 !default; // 首选背景颜色
+
+$success-text-color      : #fff !default; // 成功状态文本颜色
+$success-color           : #16c98d !default; // 成功状态背景颜色
+
+$info-text-color         : #fff !default; // 信息状态文本颜色
+$info-color              : #2fc2ef !default; // 信息状态背景颜色
+
+$warning-text-color      : #3b444f !default; // 警告状态文本颜色
+$warning-color           : #feef6d !default; // 警告状态背景颜色
+
+$danger-text-color       : #fff !default; // 危险状态文本颜色
+$danger-color            : #fa5e5b !default; // 危险状态背景颜色
