--- a/more/templates/src4game1/sass/lego/_lego.scss
+++ b/more/templates/src4game1/sass/lego/_lego.scss
@@ -13,7 +13,7 @@
 
 // 核心定义
 @import "css3";
-
+//
 // 组件
 // @import "alert";
 // @import "badge";
@@ -25,6 +25,37 @@
 // @import "form";
 // @import "pagination";
 // @import "art";
-@import "pic.s1";
+ @import "pic.s1";
 // @import "pic.s2";
 // @import "pic.t";
+
+
+///* HTML元素 */
+//@import "list"; // 文字列表
+//@import "button"; // 按钮
+//@import "form"; // 表单
+//@import "table"; // 表格
+//@import "icon"; // 字体图标
+//
+//
+/* CSS UI */
+//@import "ui.panel"; // 区块面板
+//@import "ui.figure"; // 图片列表
+//@import "ui.media"; // 媒体对象
+//@import "ui.paging"; // 分页导航
+//@import "ui.badge"; // 徽章
+//@import "ui.progress"; // 进度条
+//@import "ui.lineList"; // 带分割线的文本列表
+//
+//
+///* JS UI */
+//@import "ui.dialog"; // 弹窗
+//@import "ui.tab"; // 选项卡
+//@import "ui.slide"; // 幻灯片
+//@import "ui.carousel"; // 旋转木马
+//@import "ui.accordion"; // 手风琴
+//@import "ui.marquee"; // 轮播文字条
+//
+//
+///* 辅助工具类 */
+//@import "utility";
