--- a/more/templates/src4game1/tpl/_index.ejs
+++ b/more/templates/src4game1/tpl/_index.ejs
@@ -39,6 +39,9 @@
             <!-- 游戏视频{ -->
             <% include partial/game-video %>
             <!-- }游戏视频 -->
+            <!-- 游戏视频{ -->
+            <% include partial/game-video2 %>
+            <!-- }游戏视频 -->
             <!-- 游戏截图{ -->
             <% include partial/game-cut %>
             <!-- }游戏截图 -->
