--- a/more/templates/src4game1/tpl/partial/article.ejs
+++ b/more/templates/src4game1/tpl/partial/article.ejs
@@ -1,34 +1,34 @@
 <div id="text">
-	<p>HELLO大家好，我是超控团灯火，这是我在不删档测试里做的第二篇攻略，今天给大家带来一个我们超控团从来都没做过的内容，就是高级怪的特殊技能介绍以及应对方法，大家在将近两个礼拜对游戏的体验，应该已经对<a href="http://jf.duowan.com/" target="_blank">疾风之刃</a>这款游戏大体上比较熟悉了，在这里还是扫盲一下，高级怪物就是蓝色名字的精英怪，区别于BOSS和普通小怪。</p>
-	<p><strong>　Part1.蓝名精英怪的小秘密</strong></p>
-	<p>①蓝名精英怪都是有特殊技能的，要注意应对方法。</p>
-	<p>②不要被带有催促、粘性爆炸的高级怪和小怪群围攻。</p>
-	<p>③对付有虚张声势的怪物先把小怪杀光，如果同时出现两个虚张声势，自认倒霉。</p>
-	<p>④看清是否是免疫类型技能的高级怪，防止技能丢空。</p>
-	<p>⑤要注意领域类技能，不要不注意被毒死了。</p>
-	<p><strong>Part2.高级怪物特殊技能大汇总</strong></p>
-	<p>1.沼泽地</p>
-	<p style="text-align: center;"><img src="http://img1.dwstatic.com/jf/1411/279719263395/279719379204.jpg" zoomfile="http://img.dwstatic.com/jf/1411/279719263395/279719379204.jpg" file="http://img.dwstatic.com/jf/1411/279719263395/279719379204.jpg" inpost="1" alt="点击放大" title="沼泽地.jpg" initialized="true" width="600" style="cursor: pointer;"></p>
-	<p>沼泽地这个技能会在怪物脚下生成一个土黄色的范围领域，站在里面不会掉血但会减攻速和移速，沼泽地是自动生成的，不管怪物是被击飞还是击晕，沼泽地都会自动释放。</p>
-	<p>2.雄心</p>
-	<p style="text-align: center;"><img src="http://img4.dwstatic.com/jf/1411/279719263395/279719379205.jpg" zoomfile="http://img.dwstatic.com/jf/1411/279719263395/279719379205.jpg" file="http://img.dwstatic.com/jf/1411/279719263395/279719379205.jpg" inpost="1" alt="雄心.jpg" title="雄心.jpg" initialized="true"></p>
-	<p>拥有雄心效果的怪物身边会有几个红色的小球，在受到程度的攻击后，小球会消失，同时怪物进入持续霸体状态，破霸体技能是破除不了雄心的，只能等雄心持续时间结束或者击杀该怪物。</p>
-   <p style="text-align: center;"> <img src="http://img2.dwstatic.com/aa/1505/295624239831/1431669079316.jpg" alt="三个步骤教你上古世纪滑翔翼升级 新手必看"></p>
-   <p style="text-align: center;"><a href="javascript:;"><img src="http://img2.dwstatic.com/aa/1505/295624239831/1431669079316.jpg" alt="三个步骤教你上古世纪滑翔翼升级 新手必看"></a></p>
+    <p>HELLO大家好，我是超控团灯火，这是我在不删档测试里做的第二篇攻略，今天给大家带来一个我们超控团从来都没做过的内容，就是高级怪的特殊技能介绍以及应对方法，大家在将近两个礼拜对游戏的体验，应该已经对<a href="http://jf.duowan.com/" target="_blank">疾风之刃</a>这款游戏大体上比较熟悉了，在这里还是扫盲一下，高级怪物就是蓝色名字的精英怪，区别于BOSS和普通小怪。</p>
+    <p><strong>　Part1.蓝名精英怪的小秘密</strong></p>
+    <p>①蓝名精英怪都是有特殊技能的，要注意应对方法。</p>
+    <p>②不要被带有催促、粘性爆炸的高级怪和小怪群围攻。</p>
+    <p>③对付有虚张声势的怪物先把小怪杀光，如果同时出现两个虚张声势，自认倒霉。</p>
+    <p>④看清是否是免疫类型技能的高级怪，防止技能丢空。</p>
+    <p>⑤要注意领域类技能，不要不注意被毒死了。</p>
+    <p><strong>Part2.高级怪物特殊技能大汇总</strong></p>
+    <p>1.沼泽地</p>
+    <p style="text-align: center;"><img src="http://img1.dwstatic.com/jf/1411/279719263395/279719379204.jpg" zoomfile="http://img.dwstatic.com/jf/1411/279719263395/279719379204.jpg" file="http://img.dwstatic.com/jf/1411/279719263395/279719379204.jpg" inpost="1" alt="点击放大" title="沼泽地.jpg" initialized="true" width="600" style="cursor: pointer;"></p>
+    <p>沼泽地这个技能会在怪物脚下生成一个土黄色的范围领域，站在里面不会掉血但会减攻速和移速，沼泽地是自动生成的，不管怪物是被击飞还是击晕，沼泽地都会自动释放。</p>
+    <p>2.雄心</p>
+    <p style="text-align: center;"><img src="http://img4.dwstatic.com/jf/1411/279719263395/279719379205.jpg" zoomfile="http://img.dwstatic.com/jf/1411/279719263395/279719379205.jpg" file="http://img.dwstatic.com/jf/1411/279719263395/279719379205.jpg" inpost="1" alt="雄心.jpg" title="雄心.jpg" initialized="true"></p>
+    <p>拥有雄心效果的怪物身边会有几个红色的小球，在受到程度的攻击后，小球会消失，同时怪物进入持续霸体状态，破霸体技能是破除不了雄心的，只能等雄心持续时间结束或者击杀该怪物。</p>
+    <p style="text-align: center;"> <img src="http://img2.dwstatic.com/aa/1505/295624239831/1431669079316.jpg" alt="三个步骤教你上古世纪滑翔翼升级 新手必看"></p>
+    <p style="text-align: center;">
+        <a href="javascript:;"><img src="http://img2.dwstatic.com/aa/1505/295624239831/1431669079316.jpg" alt="三个步骤教你上古世纪滑翔翼升级 新手必看"></a>
+    </p>
 </div>
+<!-- 进入原帖{ -->
+<a href="" class="page-article__enter">点击进入论坛参与原帖讨论  ></a>
+<!-- }进入原帖 -->
 <!-- 页码{ -->
-<div class="mod-page">
-    <a href="#" rel="prev" title="上一页">上一页</a>
-    <a href="#" title="已经是当前页" class="current">1</a>
-    <a href="#" title="第2页">2</a>
-    <a href="#" title="第3页">3</a>
-    <a href="#" title="第4页">4</a>
-    <a href="#" title="第5页">5</a>
-    <a href="#" title="第16页">16</a>
-    <a href="#" title="第17页">17</a>
-    <a href="#" title="第18页">18</a>
-    <a href="#" title="第19页">19</a>
-    <a href="#" rel="next" title="下一页">下一页</a>
+<div id="pageNum">
+    <span><a target="_self" href="308664160379_2.html">上一页</a></span>
+    <span><a target="_self" href="308664160379.html">1</a></span>
+    <span><a target="_self" href="308664160379_2.html">2</a></span>
+    <span id="pageNow"><a target="_self" href="#">3</a></span><span>
+    <a target="_self" href="308664160379_4.html">4</a></span>
+    <span><a target="_self" href="308664160379_4.html">下一页</a></span>
 </div>
 <!-- }页码 -->
 
