--- a/more/templates/src4game1/tpl/partial/page-aside.ejs
+++ b/more/templates/src4game1/tpl/partial/page-aside.ejs
@@ -234,3 +234,54 @@
 		</div>
 	</div>
 </div>
+<div class="ZQ-gap"></div>
+<!-- 囧图 start  -->
+<div class="page-aside__jtu ZQ-box">
+   <div class="box-hd">
+        <h3 class="title">囧图推荐</h3>
+        <div class="act">
+            <a class="more" href="#"><i></i>更多</a>
+        </div>
+    </div>
+    <div class="box-bd">
+        <ul class="mod-pic--mid">
+            <li>
+                <a href="">
+                   <span class="jtu__img">
+                       <img src="http://img.dwstatic.com/www/1508/303928598822/1440403768176.jpg" alt="">
+                   </span>
+                    <em>视频讲解 上古世纪每日跑商走水路比较安全</em>
+                    <span class="jtu__shadow">进入囧图</span>
+                </a>
+            </li>
+             <li>
+                <a href="">
+                    <span class="jtu__img">
+                       <img src="http://img.dwstatic.com/www/1508/303928598822/1440403768176.jpg" alt="">
+                   </span>
+                    <em>视频讲解 上古世纪每日跑商走水路比较安全</em>
+                    <span class="jtu__shadow">进入囧图</span>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span class="jtu__img">
+                       <img src="http://img.dwstatic.com/www/1508/303928526489/1440403922475.jpg" alt="">
+                   </span>
+                    <em>视频讲解 上古世纪每日跑商走水路比较安全</em>
+                    <span class="jtu__shadow">进入囧图</span>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span class="jtu__img">
+                       <img src="http://img.dwstatic.com/www/1508/303928443222/1440404058459.jpg" alt="">
+                   </span>
+                    <em>视频讲解 上古世纪每日跑商走水路比较安全</em>
+                    <span class="jtu__shadow">进入囧图</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+</div>
+<!-- 囧图 end -->
