--- a/more/templates/src4game1/tpl/partial/zq-head.ejs
+++ b/more/templates/src4game1/tpl/partial/zq-head.ejs
@@ -35,12 +35,11 @@
                 <div class="list">
                     <span class="label">新手指引</span>
                     <ul>
-                        <li><a href="">新手入门</a></li>
-                        <li><a href="">注册账号</a></li>
+                        <li class="icon-hot"><i></i><a href="">新手入门</a></li>
+                        <li class="icon-new"><i></i><a href="">注册账号</a></li>
                         <li><a href="">创建人物</a></li>
                         <li><a href="">新手入门</a></li>
                         <li><a href="">注册账号</a></li>
-                        <li><a href="">创建人物</a></li>
                     </ul>
                 </div>
                 <!-- }list-1 -->
