--- a/more/templates/src4game1/sass/mod/_site-foot.scss
+++ b/more/templates/src4game1/sass/mod/_site-foot.scss
@@ -77,23 +77,27 @@
 		zoom: 1;
 	}
 	.map-list{
-		@include clearfix();
+        font-size: 0px;
 		position: relative;
-		margin-left: -61px;
+        margin-left: -1px;
 		float: left;
 		display: inline;
 	}
 	.list{
-		width: 138px;
+        width: 145px - 15;
 		padding: 0 15px;
-		float: left;
-		*display: inline;
+        @include inline-block;
 		text-align: center;
 		border-left: 1px solid #DBDBDB;
+        font-size: 0;
+        vertical-align: top;
+        a,span{
+            font-size: 12px;
+            display: block;
+        }
 		.label{
 			display: block;
 			*zoom: 1;
-			@include ellipsis();
 			text-align: center;
 			font-weight: bold;
 			color: #888;
@@ -101,10 +105,10 @@
 			line-height: 26px;
 		}
 		li{
-			@include ellipsis();
 			text-align: center;
 			height: 26px;
 			line-height: 26px;
+            overflow: hidden;
 		}
 		a{
 			color: #888;
