--- a/more/templates/src4game1/tpl/partial/index-focus.ejs
+++ b/more/templates/src4game1/tpl/partial/index-focus.ejs
@@ -90,66 +90,66 @@
 					<div class="mod-tab-content">
 						<!-- 新闻列表{ -->
 						<ul class="m-list">
-							<li><i></i><span class="date">01.02</span><a href="#" title=""><font color="">韩国玩家星际争霸高达作品死神来了韩国玩家星际争霸高达作品死神来了韩国玩家星际争霸高达作品死神来了</font></a></li>
-							<li><i></i><span class="date">11.20</span><a href="#" title=""><font color="">FF14 2.3战场技巧  诗人最强了 黑魔却垫底了</font></a></li>
-							<li><i></i><span class="date">11.17</span><a href="#" title=""><font>首位GSL美女选手参赛照片 震撼护士装</font></a></li>
-							<li><i></i><span class="date">11.14</span><a href="#" title=""><font>韩国GSL第三季1500人预选赛首日现场图赏</font></a></li>
-							<li><i></i><span class="date">11.13</span><a href="#" title=""><font>国内画师leon19星际争霸2美术作品欣赏</font></a></li>
-							<li><i></i><span class="date">11.13</span><a href="#" title=""><font>国内画师leon19星际争霸2美术作品欣赏</font></a></li>
+							<li><i></i><span class="date">01.02</span><a href="#" title="">韩国玩家星际争霸高达作品死神来了韩国玩家星际争霸高达作品死神来了韩国玩家星际争霸高达作品死神来了</a></li>
+							<li><i></i><span class="date">11.20</span><a href="#" title="">FF14 2.3战场技巧  诗人最强了 黑魔却垫底了</a></li>
+							<li><i></i><span class="date">11.17</span><a href="#" title="">首位GSL美女选手参赛照片 震撼护士装</a></li>
+							<li><i></i><span class="date">11.14</span><a href="#" title="">韩国GSL第三季1500人预选赛首日现场图赏</a></li>
+							<li><i></i><span class="date">11.13</span><a href="#" title="">国内画师leon19星际争霸2美术作品欣赏</a></li>
+							<li><i></i><span class="date">11.13</span><a href="#" title="">国内画师leon19星际争霸2美术作品欣赏</a></li>
 						</ul>
 						<!-- }新闻列表 -->
 						<!-- 新闻列表{ -->
 						<ul class="m-list">
-							<li><i></i><span class="date">01.02</span><a href="#" title=""><font>韩国玩家星际争霸高达作品死神来了</font></a></li>
-							<li><i></i><span class="date">11.20</span><a href="#" title=""><font>转虫族给力啊 星际猪出品趣味星际2漫画</font></a></li>
-							<li><i></i><span class="date">11.17</span><a href="#" title=""><font>首位GSL美女选手参赛照片 震撼护士装</font></a></li>
-							<li><i></i><span class="date">11.14</span><a href="#" title=""><font>韩国GSL第三季1500人预选赛首日现场图赏</font></a></li>
-							<li><i></i><span class="date">11.13</span><a href="#" title=""><font>国内画师leon19星际争霸2美术作品欣赏</font></a></li>
-							<li><i></i><span class="date">11.13</span><a href="#" title=""><font>国内画师leon19星际争霸2美术作品欣赏</font></a></li>
+							<li><i></i><span class="date">01.02</span><a href="#" title="">韩国玩家星际争霸高达作品死神来了</a></li>
+							<li><i></i><span class="date">11.20</span><a href="#" title="">转虫族给力啊 星际猪出品趣味星际2漫画</a></li>
+							<li><i></i><span class="date">11.17</span><a href="#" title="">首位GSL美女选手参赛照片 震撼护士装</a></li>
+							<li><i></i><span class="date">11.14</span><a href="#" title="">韩国GSL第三季1500人预选赛首日现场图赏</a></li>
+							<li><i></i><span class="date">11.13</span><a href="#" title="">国内画师leon19星际争霸2美术作品欣赏</a></li>
+							<li><i></i><span class="date">11.13</span><a href="#" title="">国内画师leon19星际争霸2美术作品欣赏</a></li>
 						</ul>
 						<!-- }新闻列表 -->
 						<!-- 新闻列表{ -->
 						<ul class="m-list">
-							<li><i></i><span class="date">01.02</span><a href="#" title=""><font>韩国玩家星际争霸高达作品死神来了</font></a></li>
-							<li><i></i><span class="date">11.20</span><a href="#" title=""><font>转虫族给力啊 星际猪出品趣味星际2漫画</font></a></li>
-							<li><i></i><span class="date">11.17</span><a href="#" title=""><font>首位GSL美女选手参赛照片 震撼护士装</font></a></li>
-							<li><i></i><span class="date">11.14</span><a href="#" title=""><font>韩国GSL第三季1500人预选赛首日现场图赏</font></a></li>
-							<li><i></i><span class="date">11.13</span><a href="#" title=""><font>国内画师leon19星际争霸2美术作品欣赏</font></a></li>
-							<li><i></i><span class="date">11.13</span><a href="#" title=""><font>国内画师leon19星际争霸2美术作品欣赏</font></a></li>
-						</ul>
-						<!-- }新闻列表 -->
-					</div>
-					<div class="mod-tab-content hide">
-						<!-- 新闻列表{ -->
-						<ul class="m-list">
-							<li><i></i><span class="date">01.02</span><a href="#" title=""><font>韩国玩家星际争霸高达作品死神来了</font></a></li>
-							<li><i></i><span class="date">11.20</span><a href="#" title=""><font>转虫族给力啊 星际猪出品趣味星际2漫画</font></a></li>
-							<li><i></i><span class="date">11.17</span><a href="#" title=""><font>首位GSL美女选手参赛照片 震撼护士装</font></a></li>
-							<li><i></i><span class="date">11.14</span><a href="#" title=""><font>韩国GSL第三季1500人预选赛首日现场图赏</font></a></li>
-							<li><i></i><span class="date">11.13</span><a href="#" title=""><font>国内画师leon19星际争霸2美术作品欣赏</font></a></li>
-							<li><i></i><span class="date">11.13</span><a href="#" title=""><font>国内画师leon19星际争霸2美术作品欣赏</font></a></li>
-						</ul>
-						<!-- }新闻列表 -->
-						<!-- 新闻列表{ -->
-						<ul class="m-list">
-							<li><i></i><span class="date">01.02</span><a href="#" title=""><font>韩国玩家星际争霸高达作品死神来了</font></a></li>
-							<li><i></i><span class="date">11.20</span><a href="#" title=""><font>转虫族给力啊 星际猪出品趣味星际2漫画</font></a></li>
-							<li><i></i><span class="date">11.17</span><a href="#" title=""><font>首位GSL美女选手参赛照片 震撼护士装</font></a></li>
-							<li><i></i><span class="date">11.14</span><a href="#" title=""><font>韩国GSL第三季1500人预选赛首日现场图赏</font></a></li>
-							<li><i></i><span class="date">11.13</span><a href="#" title=""><font>国内画师leon19星际争霸2美术作品欣赏</font></a></li>
-							<li><i></i><span class="date">11.13</span><a href="#" title=""><font>国内画师leon19星际争霸2美术作品欣赏</font></a></li>
+							<li><i></i><span class="date">01.02</span><a href="#" title="">韩国玩家星际争霸高达作品死神来了</a></li>
+							<li><i></i><span class="date">11.20</span><a href="#" title="">转虫族给力啊 星际猪出品趣味星际2漫画</a></li>
+							<li><i></i><span class="date">11.17</span><a href="#" title="">首位GSL美女选手参赛照片 震撼护士装</a></li>
+							<li><i></i><span class="date">11.14</span><a href="#" title="">韩国GSL第三季1500人预选赛首日现场图赏</a></li>
+							<li><i></i><span class="date">11.13</span><a href="#" title="">国内画师leon19星际争霸2美术作品欣赏</a></li>
+							<li><i></i><span class="date">11.13</span><a href="#" title="">国内画师leon19星际争霸2美术作品欣赏</a></li>
 						</ul>
 						<!-- }新闻列表 -->
 					</div>
 					<div class="mod-tab-content hide">
 						<!-- 新闻列表{ -->
 						<ul class="m-list">
-							<li><i></i><span class="date">01.02</span><a href="#" title=""><font>韩国玩家星际争霸高达作品死神来了</font></a></li>
-							<li><i></i><span class="date">11.20</span><a href="#" title=""><font>转虫族给力啊 星际猪出品趣味星际2漫画</font></a></li>
-							<li><i></i><span class="date">11.17</span><a href="#" title=""><font>首位GSL美女选手参赛照片 震撼护士装</font></a></li>
-							<li><i></i><span class="date">11.14</span><a href="#" title=""><font>韩国GSL第三季1500人预选赛首日现场图赏</font></a></li>
-							<li><i></i><span class="date">11.13</span><a href="#" title=""><font>国内画师leon19星际争霸2美术作品欣赏</font></a></li>
-							<li><i></i><span class="date">11.13</span><a href="#" title=""><font>国内画师leon19星际争霸2美术作品欣赏</font></a></li>
+							<li><i></i><span class="date">01.02</span><a href="#" title="">韩国玩家星际争霸高达作品死神来了</a></li>
+							<li><i></i><span class="date">11.20</span><a href="#" title="">转虫族给力啊 星际猪出品趣味星际2漫画</a></li>
+							<li><i></i><span class="date">11.17</span><a href="#" title="">首位GSL美女选手参赛照片 震撼护士装</a></li>
+							<li><i></i><span class="date">11.14</span><a href="#" title="">韩国GSL第三季1500人预选赛首日现场图赏</a></li>
+							<li><i></i><span class="date">11.13</span><a href="#" title="">国内画师leon19星际争霸2美术作品欣赏</a></li>
+							<li><i></i><span class="date">11.13</span><a href="#" title="">国内画师leon19星际争霸2美术作品欣赏</a></li>
+						</ul>
+						<!-- }新闻列表 -->
+						<!-- 新闻列表{ -->
+						<ul class="m-list">
+							<li><i></i><span class="date">01.02</span><a href="#" title="">韩国玩家星际争霸高达作品死神来了</a></li>
+							<li><i></i><span class="date">11.20</span><a href="#" title="">转虫族给力啊 星际猪出品趣味星际2漫画</a></li>
+							<li><i></i><span class="date">11.17</span><a href="#" title="">首位GSL美女选手参赛照片 震撼护士装</a></li>
+							<li><i></i><span class="date">11.14</span><a href="#" title="">韩国GSL第三季1500人预选赛首日现场图赏</a></li>
+							<li><i></i><span class="date">11.13</span><a href="#" title="">国内画师leon19星际争霸2美术作品欣赏</a></li>
+							<li><i></i><span class="date">11.13</span><a href="#" title="">国内画师leon19星际争霸2美术作品欣赏</a></li>
+						</ul>
+						<!-- }新闻列表 -->
+					</div>
+					<div class="mod-tab-content hide">
+						<!-- 新闻列表{ -->
+						<ul class="m-list">
+							<li><i></i><span class="date">01.02</span><a href="#" title="">韩国玩家星际争霸高达作品死神来了</a></li>
+							<li><i></i><span class="date">11.20</span><a href="#" title="">转虫族给力啊 星际猪出品趣味星际2漫画</a></li>
+							<li><i></i><span class="date">11.17</span><a href="#" title="">首位GSL美女选手参赛照片 震撼护士装</a></li>
+							<li><i></i><span class="date">11.14</span><a href="#" title="">韩国GSL第三季1500人预选赛首日现场图赏</a></li>
+							<li><i></i><span class="date">11.13</span><a href="#" title="">国内画师leon19星际争霸2美术作品欣赏</a></li>
+							<li><i></i><span class="date">11.13</span><a href="#" title="">国内画师leon19星际争霸2美术作品欣赏</a></li>
 						</ul>
 						<!-- }新闻列表 -->
 					</div>
