--- a/more/templates/src4game1/_index.html
+++ b/more/templates/src4game1/_index.html
@@ -9,7 +9,7 @@
     <title> 一线专区模板 </title>
     <link href="css/global.css" rel="stylesheet">
     <script src="http://assets.dwstatic.com/common/js/jquery.js"></script>
-    <script type="text/javascript" src="js/jquery.nicescroll.min.js"></script>
+    <script type="text/javascript" src="js/lib/jquery.nicescroll.min.js"></script>
     <script src="http://assets.dwstatic.com/b=lego/2.0.0/js&f=lego.switchable.js"></script>
 
 </head>
